<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">DieDroid</string>
	<string name="rollActivity">Roller</string>
	<string name="rollResultTitleStr">Result:</string>
	<string name="sidesSpinPrompt">Select Dice Type</string>
	<string-array name="sidesArray">
		<item>d2</item>
		<item>d3</item>
		<item>d4</item>
		<item>d6</item>
		<item>d8</item>
		<item>d10</item>
		<item>d12</item>
		<item>d20</item>
		<item>d30</item><item>d100</item>
		
	</string-array>
	<string-array name="activityListChoices">
		<item>Dice Roller</item>
		<item>Ability Score Roller</item>
		<item>Dice Pool Roller</item>
		<item>Pass It On</item>
	</string-array>
	<string name="commonRoll">Roll</string>
	<string name="errorNotImplemented">This has not been implemented yet.</string>
	<string name="errorInvalidEntry">One or more parameters are invalid.</string>
	<string name="poolResultsTitleStr">Results:</string>
	<string name="errorWinFailOverlap">Success and Failure values cannot overlap.</string>
	<string name="errorWinFailNegative">Success and Failure values cannot be negative.</string>
	<string name="errorNotEnoughDice">You must roll at least one die.</string>
	<string name="errorWinFailOverflow">Success and Failure values cannot exceed the number of sides.</string>
	<string name="poolSuccesses">Successes</string>
	<string name="poolFailures">Failures</string>
	<string-array name="statsRollMethods">
		<item>4d6, drop the lowest</item>
		<item>Straight 3d6</item>
		<item>1d6 + 14</item>
	</string-array>
	<string name="statsResultTitle">Stats:</string>
	<string name="menuAbout">About</string>
	<string name="menuHelp">Help</string>
	<string name="menuAboutText">DieDroid copyright 2010 Andrew Mike under the GNU GPL. Mersenne Twister implementation copyrighted by Sean Luke, licensed under a BSD license.</string>
	<string name="menuHelpPIO"><b>Pass It On</b> implements the dice used in the game <i>Never Say Die</i>, published by Philips in 1959.\n\nEach player starts with 3 chips. On a player\'s turn, they roll as many dice as they have chips (maximum 3 dice), and does the following for each die:\n\nFor an arrow pointing either left or right, the player passes a chip to the player on his left or right, respectively.\n\nFor an arrow pointing up, the player puts a chip in the center pot.\n\nFor a white dot, the player does nothing.\n\nThe player who puts the last chip into the center pot is the winner.</string>
	<string name="menuHelpPool">This rolls many dice simultaneously, useful for games that have dice pools like <i>Arkham Horror</i> or many RPGs from White Wolf.\n\nTo use, select a number and type of dice to be rolled, then set the threshold values for successes and failures.\n\nAny result less than or equal to the value in the <b>Failure</b> field will be counted as a failure, and any result greater than or equal to the value in the <b>Success</b> field will be counted as a success.\n\nTo disable either one, enter 0 in the appropriate field.</string>
	<string name="menuHelpStats">This is a useful tool for rolling a character\'s starting ability scores in d20-based RPGs. To use, choose the appropriate method of calculation, then press the <b>Roll</b> button.\n\nOptionally, you may set a minimum value using the slider; any roll lower than the value indicated will be discarded.</string>
	<string name="menuHelpDice">This is a polyhedral dice roller. When the <b>Roll</b> button is pressed, the total calculated using the formula\n\n<b>AdB + C * D</b>\n\nwhere <b>A</b> is the number of dice rolled and <b>B</b> are the number of sides on each die.\n\n<b>C</b> will be added to the result <i>before</i> being multiplied by <b>D</b>.</string>
	<string name="commonClose">Close</string>
	<string name="urlLicense">http://www.gnu.org/licenses/gpl-3.0-standalone.html</string>
	<string name="urlWebsite">https://github.com/logomancer/diedroid</string>
	<string name="pioDiceCaptionStr">Dice:</string>
	<string name="pioErrNoDice">Please select one, two, or three dice.</string>
	<string name="mainHelpTxt">Select a task from the menu.</string>
	<string name="statsDropCapTxt">Discard all values below:</string>
	<string name="commonOne">1</string>
	<string name="commonTwo">2</string>
	<string name="commonThree">3</string>
	<string name="aboutEmail">logomancer@gmail.com</string>
	<string name="aboutSiteLabel">DieDroid at Github</string>
	<string name="aboutCopyright">Copyright © 2010–2014 Andrew Mike</string>
	<string name="aboutNotFoundTitle">OI About Not Found</string>
	<string name="aboutNotFoundText">We were unable to find OI About, which is required for the about dialog. Would you like to download it now?</string>
	<string name="commonYes">Yes</string>
	<string name="commonNo">No</string>
	<string name="urlAboutMarket">market://details?id=org.openintents.about</string>
	<string name="urlAboutWeb">http://f-droid.org/repository/browse/?fdfilter=about&amp;fdid=org.openintents.about</string>
	<string-array name="aboutAuthors">
		<item>Andrew Mike\nlogomancer@gmail.com</item>
	</string-array>
	<string name="poolWinDialogCaption">Roll is a success if equal or greater than:</string>
	<string name="poolFailDialogCaption">Roll is a failure if equal or less than:</string>
	<string name="poolDialogTitle">Select Value</string>
	<string name="commonDisabled">Disabled</string>
	<string name="poolOrMore">or more</string>
	<string name="poolOrLess">or less</string>
</resources>
